[gd_scene load_steps=4 format=3 uid="uid://dddvhbvtg8x5j"]

[ext_resource type="Script" uid="uid://cybrkp5aib52g" path="res://multiplayer/scripts/MutiplayerController.gd" id="1_fy4ev"]
[ext_resource type="Script" uid="uid://bact61yfomra4" path="res://multiplayer/scripts/ServerBrowser.gd" id="2_quh5b"]
[ext_resource type="PackedScene" uid="uid://dpqlhqyadbpvs" path="res://multiplayer/scenes/server_info.tscn" id="3_blfv7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fy4ev")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 120.0
offset_right = 251.0
offset_bottom = 168.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = -93.0
offset_right = 465.0
offset_bottom = -45.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 479.0
offset_top = 120.0
offset_right = 656.0
offset_bottom = 168.0
text = "Start Game"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 68.0
offset_right = 508.0
offset_bottom = 99.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 70.0
offset_right = 122.0
offset_bottom = 96.0
text = "Name"

[node name="ServerBrowser" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_quh5b")
serverInfo = ExtResource("3_blfv7")

[node name="BroadcastTimer" type="Timer" parent="ServerBrowser"]

[node name="Label2" type="Label" parent="ServerBrowser"]
layout_mode = 0
offset_left = 890.0
offset_top = 26.0
offset_right = 1137.0
offset_bottom = 78.0
text = "Bound To 
Listen Port: "

[node name="Panel" type="Panel" parent="ServerBrowser"]
layout_mode = 0
offset_left = 44.0
offset_top = 248.0
offset_right = 687.0
offset_bottom = 580.0

[node name="ServerInfo2" type="HBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 2
offset_top = 1.0
offset_right = 643.0
offset_bottom = 51.0

[node name="Name" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="Ip" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP"

[node name="PlayerCount" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Count"

[node name="PlayerCount2" type="Label" parent="ServerBrowser/Panel/ServerInfo2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="VBoxContainer" type="VBoxContainer" parent="ServerBrowser/Panel"]
layout_mode = 0
offset_top = 53.0
offset_right = 643.0
offset_bottom = 329.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 890.0
offset_top = 102.0
offset_right = 1115.0
offset_bottom = 171.0
text = "test add player (host)"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
[connection signal="timeout" from="ServerBrowser/BroadcastTimer" to="ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
